--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 @charset 'utf-8';
 
 /*@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css); .notosanskr * { font-family: 'Noto Sans KR', sans-serif; }*/
+@font-face { font-family: 'WONDotum'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/WONDotum.woff') format('woff'); font-weight: normal; font-style: normal; }
+
 
 *{margin: 0;padding: 0;}
-html,body{font-size: 12px; color: #333;}
+html,body{font-size: 12px; color: #333;font-family: 'NanumSquare', sans-serif !important;}
 h1,h2,h3,h4,h5,h6{font-size: 100%;}
 ol,ul{list-style: none;}
 a{text-decoration: none; color: inherit;}
@@ -17,64 +19,144 @@ address{font-style: normal;}
 }
 
 .boxalign{
-    width: 1100px;
+    width: 1020px;
     margin: auto;
 }
 
 header{
-    height: 100px;
+    
 /*    background: #eee;*/
 }
-header::after{
+
+header .htop{
+    background: #333;
+    color: #fff;
+}
+.htop .htmenu{
+    overflow: hidden;
+    padding: 1.3rem 5px;
+}
+.htmenu li{
+    float: left;
+}
+.htmenu li:first-child a{
+    background: url(../img/home_icon.png) no-repeat;
+    padding-left: 20px;
+    opacity: 0.7;
+}
+.htmenu li a{
+    display: block;
+    float: left;
+    opacity: 0.7;
+    transition: 0.3s;
+}
+.htmenu li:hover a{
+    opacity: 1;
+}
+.htmenu li span{
+    display: block;
+    width: 1px;
+    height: 10px;
+    background: #666;
+    float: right;
+    margin: 2px 10px 0;
+}
+
+header .hbot{
+    height: 84px;
+}
+.hbot::after{
     clear: both;
     content: '';
     display: block;
 }
-
-
-
-#logo{
+.hbot #logo{
     float: left;
-    margin-top: 45px;
+    margin-top: 30px;
 }
 #logo h1{}
 #logo h1 a{}
 #logo h1 a img{}
 
-nav{
+.hbot nav{
+/*    font-family: 'WONDotum';*/
     float: right;
+    margin-top: 45px;
+    position: relative;
 }
 nav div{
     float: left;
-    text-align: center;
-    font-size: 1.3rem;
-    margin-top: 45px;
+/*    text-align: center;    */
+    position: relative;
 }
 nav div+div{
     margin-left: 60px;
 }
-nav div::after{
-    content: '';
+
+nav div>a{
+    font-size: 1.5rem;
     display: block;
-    border-bottom: 1px solid #532c6d;
-    width: 0;
-    transition: 0.3s;
-    margin: auto;
-    padding-bottom: 4px;
-}
-nav div a{
-    display: block;
-    color: #999;
-}
-nav div:hover::after{
-    width: 100%;
-}
-nav div:hover a{
-    color: #532c6d;
+    color: rgba(246, 244, 240, 0.7);
+/*    font-weight: bold;*/
 }
 
+nav div:hover>a{
+    color: #f6f4f0;
+}
+
+
+nav .sub{
+    position: absolute;
+    width: 600px;
+    z-index: 99;
+    top: 38px;
+    left: -70%;
+/*    overflow: hidden;*/
+    display: none;
+}
+nav .sub::after{
+    display: block;
+    clear: both;
+    content: '';
+}
+nav .sub li{
+    float: left;
+    margin-right: 20px;
+}
+nav .sub li a{
+    display: block;
+    color: #6d6572;
+    line-height: 46px;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+nav .sub li:hover a{
+    color: #774c91;
+}
+
+
+
+header .box{
+    background: url(../img/hbox.jpg);
+    width: 100%;
+    height: 128px;
+}
+header .sbox{
+    position: absolute;
+    width: 100%;
+    height: 46px;
+    background: #f6f4f0;
+    top: 128px;
+    z-index: 90;
+    display: none;
+}
+
+
+
+
+
 main{
-    width: 1920px;
+/*    width: 1920px;*/
     height: 432px;
 }
 main .slide{
@@ -91,7 +173,7 @@ main .slide{
     position: absolute;
 }
 .slide li .stext{
-    margin: 115px 0 0 410px;
+    margin: 115px 0 0 445px;
 }
 .slide li .stext span{
     font-size: 1.6rem;
@@ -102,18 +184,17 @@ main .slide{
     padding: 10px 0 20px;
 }
 .slide li .stext button{
-    
+    border-radius: 3px;
     display: block;
     font-size: 1.2rem;
     border: 1px solid #333;
-    padding: 10px 15px;
+    padding: 8px 13px;
     margin-top: 15px;
     transition: 0.3s;
 }
 .stext button:hover{
     background: #333;
     color: #fff;
-/*    font-weight: bold;*/
 }
 
 .slide .simg1{
@@ -131,6 +212,429 @@ main .slide{
 
 
 section{}
+
+#banner{
+}
+#banner::after{
+    clear: both;
+    content: '';
+    display: block;
+}
+
+#banner #ban01{
+    float: left;
+    width: 510px;
+    height: 255px;
+/*    background: #6c9b32;*/
+}
+
+#ban01 .textcover{
+    width: 255px;
+    height: 255px;
+    float: left;
+    background: #333;
+    text-align: center;
+    color: #f6f4f0;
+}
+.textcover h4{    
+    padding-top: 30px;
+    font-size: 1.5rem;
+    font-weight: normal;
+}
+.textcover h2{
+    
+    margin-top: 5px;
+    font-weight: normal;
+    font-size: 3.5rem;
+    line-height: 1;
+}
+.textcover h2 b{}
+.textcover img{
+    padding: 20px 0;
+}
+.textcover p{
+/*    letter-spacing: -0.5px;*/
+    line-height: 1.4;
+}
+
+
+#ban01 .imgcover{
+    width: 255px;
+    height: 255px;
+    float: right;
+}
+
+
+
+
+#banner #ban02{
+    float: right;
+    width: 510px;
+    height: 510px;
+}
+
+#ban02 #icons{
+    width: 255px;
+    height: 255px;
+    float: left;
+/*    background: #eee;*/
+}
+#icons ul{
+    width: 255px;
+    height: 255px;
+    background: #fafafa;
+    position: relative;
+}
+#icons ul li{
+    float: left;
+    width: 127px;
+    height: 127px;
+    text-align: center;
+/*    border: 1px solid #eee;*/
+/*    box-sizing: border-box;*/
+}
+#icons li:nth-child(2){
+    border-left: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+}
+#icons li:nth-child(3){
+    border-top: 1px solid #eee;
+    border-right: 1px solid #eee;
+    position: absolute;
+    top: 127px;
+}
+#icons li:nth-child(4){
+    position: absolute;
+    top: 128px;
+    left: 128px;
+}
+#icons ul li a{
+    display: block;
+    background: url(../img/b_menu.png);
+    transition: 0.3s;
+}
+
+#icons ul li a span{
+    display: block;
+    font-size: 1.4rem;
+    padding-top: 85px;
+/*    transition: 0.3s;*/
+}
+
+#icons .icon1 a{
+    background-position: 0 -15px;
+}
+#icons .icon2 a{
+    background-position: -127px -15px;
+}
+#icons .icon3 a{
+    background-position: -254px -15px;
+}
+#icons .icon4 a{
+    background-position: -381px -20px;
+}
+
+#icons li:hover{
+    background: #ffad3d;
+    color: #fff;
+}
+#icons .icon1:hover a{
+    background-position: 0 -145px;
+}
+#icons .icon2:hover a{
+    background-position: -127px -145px;
+}
+#icons .icon3:hover a{
+    background-position: -254px -145px;
+}
+#icons .icon4:hover a{
+    background-position: -381px -145px;
+}
+
+
+
+
+
+#icons .textcover{
+    background: #ce2f47;
+    width: 255px;
+    height: 255px;
+    text-align: center;
+    color: #f6f4f0;
+}
+
+
+#ban02 #news{
+    float: right;
+    width: 255px;
+    height: 510px;
+    position: relative;
+    padding: 20px;
+    box-sizing: border-box;
+    border-left: 1px solid #eee;
+    border-right: 1px solid #eee;
+}
+#news h3{
+    font-size: 2.5rem;
+    color: #532c6d;
+    font-weight: 800;
+    letter-spacing: -1px;
+}
+#news span{
+    display: block;
+    width: 40px;
+    border-bottom: 2px solid #532c6d;
+    padding-bottom: 10px;
+}
+#news .newsbox{
+    height: 200px;
+}
+.newsbox h4{
+    font-size: 1.6rem;
+    font-weight: 800;
+    padding-top: 30px;
+}
+.newsbox p{
+    font-size: 1.2rem;
+    padding: 15px 0;
+    color: #777;
+}
+.newsbox h5{
+    color: #666;
+}
+#news .bar{
+    position: absolute;
+    width: 90%;
+    border-bottom: 1px dashed #ccc;
+    top: 50%;
+    left: 5%;
+}
+
+
+#banner #ban03{
+    float: left;
+    width: 510px;
+    height: 510px;
+/*    background: #976545;*/
+    position: relative;
+}
+#ban03 .stext{
+    position: absolute;
+    padding: 30px;
+    z-index: 50;
+}
+.stext h2{
+    font-size: 3.5rem;
+    font-weight: normal;
+}
+.stext h2 b{
+    font-weight: 800;
+}
+#ban03 .stext>span{
+    display: block;
+    width: 40px;
+    border-bottom: 2px solid;
+    margin: 25px 0 20px;
+}
+.stext h3{
+    font-size: 2.3rem;
+    padding-bottom: 15px;
+}
+#ban03 .stext p{
+    font-size: 1.4rem;
+    font-weight: 600;
+    
+/*
+    background: #ffc936;
+    height: 10px;
+*/
+}
+.stext p .tline{
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+}
+.tline span{
+    position: relative;
+    z-index: 11;
+}
+.tline::before{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 10px;
+    background: rgb(255, 209, 54);
+    position: absolute;
+    top: 50%;
+    left: -100%;
+    z-index: 10;
+    transition: 0.3s;
+}
+#ban03:hover .tline::before{
+    left: 0;
+}
+
+#ban03 .imgs{
+}
+.imgs img{
+    position: absolute;
+    top: -5%;
+    right: 0;
+    z-index: 5;
+}
+
+
+#banner #ban04{
+    float: right;
+    width: 510px;
+    height: 255px;
+    background: #3b937f;
+    overflow: hidden;
+}
+#ban04 .textcover{
+    width: 255px;
+    height: 255px;
+    float: right;
+    text-align: center;
+    color: #f6f4f0;
+}
+#ban04 .imgcover{
+    float: left;
+}
+
+
+
+#notice{}
+#notice .ntitle{
+    text-align: center;
+    padding-top: 80px;
+}
+.ntitle h2{
+    font-size: 1.5rem;
+    letter-spacing: 5px;
+    font-family: 'Nanum Myeongjo', serif;
+    padding-bottom: 10px;
+}
+
+.ntitle .nbar{
+    background: url(../img/line_bg01.png) repeat-x center;
+}
+.ntitle .nbar h3{
+    font-size: 2rem;
+/*    display: inline-block;*/
+    background: #fff;
+    font-family: 'Nanum Myeongjo', serif;
+    width: 180px;
+    letter-spacing: 10px;
+    margin: auto;
+}
+
+.ntitle p{
+    color: #999;
+    font-size: 1.1rem;
+    line-height: 1.4;
+    padding-top: 12px;    
+}
+
+#notice .nban{}
+.nban ul{
+    overflow: hidden;
+    margin-top: 60px;
+}
+.nban ul li{
+    float: left;
+    width: 215px;
+    background: #f8f8f8;
+    border: 1px solid #ccc;
+}
+.nban li+li{
+    margin-left: 50px;
+}
+.nban li:nth-child(even){
+    margin-top: 60px;
+}
+.nban ul li a{
+    display: block;
+    padding: 15px;
+}
+.nban ul li a img{
+    width: 100%;
+}
+.nban ul li a span{
+    display: block;
+}
+
+.nbtitle{
+    font-size: 1.4rem;
+    font-weight: bold;
+    padding: 20px 0 15px;
+}
+.nbtext{
+    font-size: 1.1rem;
+    line-height: 1.4;
+    color: #777;
+}
+.nbmore{
+    color: #555;
+    padding-top: 10px;
+}
+
+#notice .nbtn{
+    text-align: center;
+    margin: 5rem;
+}
+#notice .nbtn a{
+/*    font-family: 'Nanum Myeongjo', serif;*/
+    display: inline-block;
+    background: #6f3396;
+    color: #fff;
+    padding: 10px 25px;
+    font-size: 1.5rem;
+    border-radius: 50px;
+    border: 1px solid #6f3396;
+}
+
+#notice .nbtn a:hover{
+    background: #fff;
+    color: #6f3396;
+}
+
+
+
+#box{
+    overflow: hidden;
+    background: #ddd;
+    padding: 2rem;
+}
+#box .kbox.left{
+    float: left;
+    background: url(../img/banner_bg01.jpg) no-repeat 370px #2e4e7d;
+}
+#box .kbox.right{
+    float: right;
+    background: url(../img/banner_bg02.jpg) no-repeat 370px center #304151;
+}
+#box .kbox{
+    color: #fff;
+    padding: 2rem;
+    width: 450px;
+}
+.kbox h3{
+    font-size: 1.5rem;
+}
+.kbox p{
+    font-size: 1.2rem;
+    padding: 20px 0 5px;
+}
+.kbox a{}
+
+
+#grmn{}
+
+
+
+
+
 
 footer{}
 
