--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,86 @@ nav div>a{
 nav div:hover>a{
     color: #f6f4f0;
 }
+nav div .micon1{
+    background: url(../img/menu_icon.png);
+    width: 30px;
+    height: 15px;
+    position: absolute;
+    top: 170%;
+    left: 30%;
+    opacity: 0;
+}
+
+nav div .micon2{
+    background: url(../img/menu_icon.png);
+    width: 30px;
+    height: 15px;
+    position: absolute;
+    top: 170%;
+    left: 15%;
+    opacity: 0;
+}
+
+nav div .micon3{
+    background: url(../img/menu_icon.png);
+    width: 30px;
+    height: 15px;
+    position: absolute;
+    top: 170%;
+    left: 35%;
+    opacity: 0;
+}
+nav div .micon4{
+    background: url(../img/menu_icon.png);
+    width: 30px;
+    height: 15px;
+    position: absolute;
+    top: 170%;
+    left: 15%;
+    opacity: 0;
+}
+
+
+nav div:hover .micon1{
+    background: url(../img/menu_icon.png);
+    width: 30px;
+    height: 15px;
+    position: absolute;
+    top: 170%;
+    left: 30%;
+    opacity: 1;
+}
+
+nav div:hover .micon2{
+    background: url(../img/menu_icon.png);
+    width: 30px;
+    height: 15px;
+    position: absolute;
+    top: 170%;
+    left: 15%;
+    opacity: 1;
+}
+
+nav div:hover .micon3{
+    background: url(../img/menu_icon.png);
+    width: 30px;
+    height: 15px;
+    position: absolute;
+    top: 170%;
+    left: 35%;
+    opacity: 1;
+}
+nav div:hover .micon4{
+    background: url(../img/menu_icon.png);
+    width: 30px;
+    height: 15px;
+    position: absolute;
+    top: 170%;
+    left: 15%;
+    opacity: 1;
+}
+
+
 
 
 nav .sub{
@@ -187,23 +267,20 @@ nav .sub li:hover a{
 }
 
 
-
 header .box{
     background: url(../img/hbox.jpg);
     width: 100%;
-    height: 128px;
+    height: 84px;
 }
 header .sbox{
     position: absolute;
     width: 100%;
     height: 46px;
     background: #f6f4f0;
-    top: 128px;
+    top: 133px;
     z-index: 90;
     display: none;
 }
-
-
 
 
 
@@ -514,10 +591,10 @@ section{}
     content: '';
     display: block;
     width: 100%;
-    height: 10px;
+    height: 50px;
     background: rgb(255, 209, 54);
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: -100%;
     z-index: 10;
     transition: 0.3s;
@@ -655,7 +732,7 @@ section{}
 
 #box{
     overflow: hidden;
-    background: #ddd;
+    background: #eee;
     padding: 2rem;
 }
 #box .kbox.left{
@@ -729,6 +806,9 @@ footer .ftop{
 .ftop ul li span{
     padding: 0 10px;
 }
+.ftop a:hover{
+    text-decoration: underline;
+}
 
 footer .fbot{
     overflow: hidden;
@@ -761,4 +841,145 @@ select{
     color: #999;
 }
 select option{}
+
+
+/*---------------------sub page------------------*/
+
+#subbaner{}
+
+#subcontent{
+    height: 1080px;
+}
+#subcontent .sbcbody{
+    position: relative;
+}
+.sbcbody .sbtitle{
+    position: absolute;
+    z-index: 10;
+/*    text-align: center;*/
+    color: #fff;
+    background: #000;
+    padding: 100px 100px 100px 250px;
+    opacity: 0.8;
+    top: 25%;
+}
+.sbtitle h3{
+    font-family: 'Nanum Myeongjo', serif;
+    font-size: 5rem;
+    font-weight: normal;
+    letter-spacing: -2px;
+    text-align: center;
+}
+.sbtitle img{
+    padding: 20px 0 30px;
+}
+.sbtitle p{
+    width: 390px;
+    font-size: 1.4rem;
+    line-height: 1.7;
+    font-weight: 100;
+    text-align: center;
+}
+.sbtitle p .stline{
+    display: block;
+    position: relative;
+    overflow: hidden;
+    width: 285px;
+    margin: auto;
+}
+.stline span{
+    position: relative;
+    z-index: 10;
+}
+.stline::before{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 10px;
+    background: #522b6c;
+    position: absolute;
+    top: 50%;
+    left: -100%;
+    z-index: 10;
+    transition: 0.3s;
+}
+.sbtitle:hover .stline::before{
+    left: 0;
+}
+
+.sbtbg{
+    background: url(../img/sbc_bg01.jpg);
+    width: 100%;
+    height: 1080px;
+/*    opacity: 0.5;*/
+}
+
+#subcontent .sbcbody2{
+    position: relative;
+}
+
+.sbcbody2 .sbtitle2{
+    position: absolute;
+    z-index: 10;
+/*    text-align: center;*/
+    color: #fff;
+    background: #000;
+    padding: 100px 100px 100px 250px;
+    opacity: 0.8;
+    top: 25%;
+}
+.sbtitle2 h3{
+    font-family: 'Nanum Myeongjo', serif;
+    font-size: 5rem;
+    font-weight: normal;
+    letter-spacing: -2px;
+    text-align: center;
+}
+.sbtitle2 img{
+    padding: 20px 0 30px;
+}
+.sbtitle2 p{
+    width: 390px;
+    font-size: 1.4rem;
+    line-height: 1.7;
+    font-weight: 100;
+    text-align: center;
+}
+.sbtitle2 p .stline{
+    display: block;
+    position: relative;
+    overflow: hidden;
+    width: 285px;
+    margin: auto;
+}
+.stline span{
+    position: relative;
+    z-index: 10;
+}
+.stline::before{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 10px;
+    background: #522b6c;
+    position: absolute;
+    top: 50%;
+    left: -100%;
+    z-index: 10;
+    transition: 0.3s;
+}
+.sbtitle2:hover .stline::before{
+    left: 0;
+}
+
+
+
+
+.sbtbg2{
+    background: url(../img/sbc_bg02.jpg);
+    width: 100%;
+    height: 1080px;
+}
+
+
 
